versioned_docs/version-4.13.0/api/2_capi/group/setgroupopen.md
# SetGroupOpen
## Overview
Set whether a group is open (true) or closed (false).

<PartialServop service_name="group" operation_name="SET_GROUP_OPEN" / >

## Usage

```mdx-code-block
<BrowserWindow>
<Tabs>
<TabItem value="csharp" label="C#">
```

```csharp
string groupId = "a-group-id";
bool isOpenGroup = false;
SuccessCallback successCallback = (response, cbObject) =>
{
    Debug.Log(string.Format("Success | {0}", response));
};
FailureCallback failureCallback = (status, code, error, cbObject) =>
{
    Debug.Log(string.Format("Failed | {0}  {1}  {2}", status, code, error));
};

<%= data.branding.codePrefix %>.Group.SetGroupOpen(groupId, isOpenGroup, successCallback, failureCallback);
```

```mdx-code-block
</TabItem>
<TabItem value="cpp" label="C++">
```

```cpp
const char *groupId = "a-group-id";
bool isOpenGroup = false;

<%= data.branding.codePrefix %>->getGroup()->setGroupOpen(groupId, isOpenGroup, this);
```

```mdx-code-block
</TabItem>
<TabItem value="objectivec" label="Objective-C">
```

```objectivec
NSString *groupId = @"a-group-id";
bool isOpenGroup = false;
BCCompletionBlock successBlock;      // define callback
BCErrorCompletionBlock failureBlock; // define callback

[[<%= data.branding.codePrefix %> groupService] setGroupOpen:groupId
                isOpenGroup:isOpenGroup
            completionBlock:successBlock
       errorCompletionBlock:failureBlock
                   cbObject:nil];
```

```mdx-code-block
</TabItem>
<TabItem value="java" label="Java">
```

```java
String groupId = "a-group-id";
boolean isOpenGroup = false;
this; // implements IServerCallback

<%= data.branding.codePrefix %>.getGroup().setGroupOpen(groupId, isOpenGroup, this);

public void serverCallback(ServiceName serviceName, ServiceOperation serviceOperation, JSONObject jsonData)
{
    System.out.print(String.format("Success | %s", jsonData.toString()));
}
public void serverError(ServiceName serviceName, ServiceOperation serviceOperation, int statusCode, int reasonCode, String jsonError)
{
    System.out.print(String.format("Failed | %d %d %s", statusCode,  reasonCode, jsonError.toString()));
}
```

```mdx-code-block
</TabItem>
<TabItem value="js" label="JavaScript">
```

```javascript
var groupId = "a-group-id";
var isOpenGroup = false;

<%= data.branding.codePrefix %>.group.setGroupOpen(groupId, isOpenGroup, result =>
{
	var status = result.status;
	console.log(status + " : " + JSON.stringify(result, null, 2));
});
```

```mdx-code-block
</TabItem>
<TabItem value="cfs" label="Cloud Code">
```

```cfscript
var groupId = "a-group-id";
var isOpenGroup = false;
var groupProxy = bridge.getGroupServiceProxy();

var postResult = groupProxy.setGroupOpen(groupId, isOpenGroup);
if (postResult.status == 200) {
    // Success!
}
```

```mdx-code-block
</TabItem>
<TabItem value="r" label="Raw">
```

```r
{
	"service": "group",
	"operation": "SET_GROUP_OPEN",
	"data": {
		"groupId": "a-group-id",
		"isOpenGroup": true
	}
}
```

```mdx-code-block
</TabItem>
</Tabs>
</BrowserWindow>
```

<details>
<summary>JSON Response</summary>

```json
{
    "status": 200,
    "data": null
}
```
</details>

## Method Parameters
Parameter | Description
--------- | -----------
groupId | ID of the group
isOpenGroup | true if group is open; false if closed


